--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,8 +50,8 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v3.1.0
       with:
-        username: ${{ secrets.DOCKERHUB_USER }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKERHUB_TOKEN }}
+        password: ${{ secrets.DOCKERHUB_PASSWD }}
 
     - name: Build and push
       uses: docker/build-push-action@v6
