--- a/ascend-device-plugin-2.4.0.yaml
+++ b/ascend-device-plugin-2.4.0.yaml
@@ -9,7 +9,7 @@ rules:
     verbs: ["get", "list", "update", "watch", "patch"]
   - apiGroups: [""]
     resources: ["nodes"]
-    verbs: ["get", "patch"]
+    verbs: ["get", "update", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
