--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 vnpus:
-- chipName: 910B
+- chipName: 910A
   commonWord: Ascend910A
   resourceName: huawei.com/Ascend910A
   resourceMemoryName: huawei.com/Ascend910A-memory
@@ -20,8 +20,8 @@ vnpus:
       memory: 17476
       aiCore: 16
 - chipName: 910B3
-  commonWord: Ascend910B
-  resourceName: huawei.com/Ascend910B
+  commonWord: Ascend910B3
+  resourceName: huawei.com/Ascend910B3
   resourceMemoryName: huawei.com/Ascend910B-memory
   memoryAllocatable: 65536
   memoryCapacity: 65536
