--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -19,10 +19,11 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+      - run: go mod tidy
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.60
+          version: latest
 
   build:
     env:
