--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -24,6 +24,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
+          args: --timeout=5m
 
   build:
     env:
