--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+        submodules: true
 
     - name: Get branch names.
       id: branch-names
