update_CI and delete go mod tidy to avoid error
Signed-off-by: limengxuan <mengxuan.li@dynamia.ai>

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          submodules: true 
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
