--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+      - run: go mod tidy
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
