--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,6 +22,9 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+      - run: go mod download github.com/Project-HAMi/HAMi
+      - run: go get github.com/Project-HAMi/ascend-device-plugin/internal/server
+      - run: 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
