--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+      - run: go mod download github.com/Project-HAMi/HAMi
+      - run: go get github.com/Project-HAMi/ascend-device-plugin/internal/server
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
